--- a/index.html
+++ b/index.html
@@ -1,14 +1,106 @@
 <!DOCTYPE html>
-<html lang="Ру">
+<html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Valeria Kliui</title>
 </head>
+
 <body>
     <h1 class="name">
         Клюй Валерия Игоревна
     </h1>
+    <h2 class="title">
+Front-end разработчик
+    </h2>
+    <div class="container">
+    <div class="personal-info">
+        <img src="resources/image.jpg" alt="photo" class="photo" height="250">
+        <h2 class="title">
+            Личная информация
+        </h2>
+        <p class="text">
+            Дата рождения
+            14.03.2002
+        </p>
+        <p class="text">
+            Возраст
+            20 лет
+        </p>
+        <p class="text">
+            Адрес проживания
+            г. Минск, ул. Розы
+            Люксембург,
+            д. 116, кв. 77
+        </p>
+        <p class="text">
+            Контакты
+            +375-29-322-15-86,
+            valeriakliui@gmail.com
+        </p>
+        <h2 class="title">
+            GitHub
+        </h2>
+        <a class="link" href="https://github.com/ValeriaKliui" target="_blank">
+            https://github.com/ValeriaKliui
+        </a>
+        <h2 class="title">
+            О себе:
+        </h2>
+        <p class="text">
+            Внимательная, усидчивая, ответственная.
+            Заинтересована в изучении новых технологий и инструментов.
+        </p>
+    </div>
+    <div class="professional-info">
+        <h2 class="title">
+            Образование
+        </h2>
+        <p class="text">
+            2019-2023 – Белорусский государственный университет информатики и радиоэлектроники (БГУИР) </p>
+        <p class="text">
+            студентка 4-го курса
+        </p>
+        <p class="text">
+            Факультет: инженерно-экономический
+        </p>
+        <p class="text">
+            Специальность: экономика электронного бизнеса
+        </p>
+        <p class="text">
+            Квалификация: экономист-программист
+        </p>
+        <p class="text">
+            Форма обучения: очная
+        </p>
+        <h2 class="title">
+            Курсы
+        </h2>
+        <p class="text">
+            – проходила курсы The Rolling Scopes School
+        </p>
+        <h2 class="title">
+            Опыт работы
+        </h2>
+        <p class="text">
+            Отсутствует
+        </p>
+        <h2 class="title">
+            Профессиональные навыки
+        </h2>
+        <ul>
+            <li>Владение английским языком на уровне B2</li>
+            <li>Уверенные знания HTML/CSS, JavaScript</li>
+            <li>Базовые знания PHP</li>
+            <li>Опыт создания лендинга</li>
+            <li>Опыт работы с GIT</li>
+            <li>Знания ООП, основных связей и сущностей БД</li>
+        </ul>
+    </div>
+    </div>
 </body>
 </html>
