to move elements

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Front-end разработчик
         </p>
     </div>
     <div class="professional-info">
-        <h2 class="title">
+        <h2 class="title education">
             Образование
         </h2>
         <p class="text">
