add change of languages

--- a/index-en.html
+++ b/index-en.html
@@ -19,32 +19,31 @@
             Front-end разработчик
         </h2>
         <select class="language">
-            <option value="ru" selected>RU</option>
-            <option value="en">EN</option>
+            <option value="ru">RU</option>
+            <option value="en" selected>EN</option>
         </select>
     </div>
     <div class="container">
         <div class="personal-info">
             <img src="resources/image.jpg" alt="photo" class="photo" height="250">
             <h2 class="title">
-                Личная информация
+                Personal information
             </h2>
             <p class="text">
-                Дата рождения:
+                Date of birth:
                 14.03.2002
             </p>
             <p class="text">
-                Возраст
-                20 лет
+                Age:
+                20 years
             </p>
             <p class="text">
-                Адрес проживания:
-                г. Минск, ул. Розы
-                Люксембург,
-                д. 116, кв. 77
+                Address:
+                Minsk, R. Luxembourg,
+                116-77
             </p>
             <p class="text">
-                Контакты:
+                Contacts:
                 +375-29-322-15-86,
                 valeriakliui@gmail.com
             </p>
@@ -55,56 +54,56 @@
                 https://github.com/ValeriaKliui
             </a>
             <h2 class="title">
-                О себе
+                About me
             </h2>
             <p class="text">
-                Внимательная, усидчивая, ответственная.
-                Заинтересована в изучении новых технологий и инструментов.
+                Observant, dutiful, responsible.
+                Interested in learning new technologies and instruments in the sphere of Web Development.
             </p>
         </div>
         <div class="professional-info">
             <h2 class="title education">
-                Образование
+                Education
             </h2>
             <p class="text">
-                2019-2023 – Белорусский государственный университет информатики и радиоэлектроники (БГУИР) </p>
+                2019-2023 – Belarusian State University of Informatics and Radioelectronics (BSUIR) </p>
             <p class="text">
-                студентка 4-го курса
+                4-year student
             </p>
             <p class="text">
-                Факультет: инженерно-экономический
+                Faculty: Engineering and Economics
             </p>
             <p class="text">
-                Специальность: экономика электронного бизнеса
+                Speciality: E-business economy
             </p>
             <p class="text">
-                Квалификация: экономист-программист
+                Qualification: Economist-programmer
             </p>
             <p class="text">
-                Форма обучения: очная
+                Form of education: full-time
             </p>
             <h2 class="title">
-                Курсы
+                Courses
             </h2>
             <p class="text">
-                – проходила курсы The Rolling Scopes School
+                – The Rolling Scopes School
             </p>
             <h2 class="title">
-                Опыт работы
+                Work experience
             </h2>
             <p class="text">
-                Отсутствует
+                Absent
             </p>
             <h2 class="title">
-                Профессиональные навыки
+                Skills
             </h2>
             <ul>
-                <li>Владение английским языком на уровне B2</li>
-                <li>Уверенные знания HTML/CSS, JavaScript</li>
-                <li>Базовые знания PHP</li>
-                <li>Опыт создания лендинга</li>
-                <li>Опыт работы с GIT</li>
-                <li>Знания ООП, основных связей и сущностей БД</li>
+                <li>English level - B2</li>
+                <li>HTML/CSS, JavaScript</li>
+                <li>PHP</li>
+                <li>GIT</li>
+                <li>Experience in creating of landing-pages</li>
+                <li>OOP and Data structures knowledge</li>
             </ul>
         </div>
     </div>
